brodin-cluster/manifest/brodin-web/ingress/brodin-website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brodin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  rules:
    - host: brodin.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brodin-website-service
                port:
                  number: 80
    # - host: tutorial.brodin.nl
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: tutorial-service
    #             port:
    #               number: 80
  tls:
    - secretName: brodin-website-cert
      hosts:
        - brodin.nl
    # - secretName: tutorial-service-cert
    #   hosts:
    #     - tutorial.brodin.nl
